# amazon-review-classification

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: model.py  server.py  utils.py
